--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
-build/scss
+token/build/
 
 # Dependency directories
 node_modules/
